# tello-face-follow

./: .gitignore  README.md  pyproject.toml
src/: capture_dataset.py  face_trainer.py  main.py
src/webcam_test/: webcam_test.py
