[project]
name = "tello-face-follow"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "abisatyaw", email = "abisatya90@gmail.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "opencv-contrib-python>=4.10.0.84",
    "djitellopy>=2.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tello_face_follow"]
